--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,9 @@ jobs:
           echo "Build docker start------------------------------"
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          echo "ECR_REGISTRY :::::::::::::: $ECR_REGISTRY"
+          echo "ECR_REPOSITORY :::::::::::::: $ECR_REPOSITORY"
+          echo "IMAGE_TAG :::::::::::::: $IMAGE_TAG"
           echo "Docker PUSH start------------------------------"
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
