--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,8 +89,14 @@ jobs:
       
       
       - name: Pull latest images
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+          IMAGE_TAG: latest
         run: |
-         docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+         echo "Docker pull start --------------"
+         docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+         echo "Docker pull finiisheddddd --------------"
          
       # - name: Stop and remove  container if running
       #   run: |
@@ -98,7 +104,9 @@ jobs:
        
       - name: Run Docker Image to serve users
         run: |
+         echo "Docker run start ---------------------------------- "
          docker run -d -p 8080:8080 --ipc="host" --name=mltest -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+         echo "Docker run FIINISH --------------------------------- "
       - name: Clean previous images and containers
         run: |
          docker system prune -f
