--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,7 +109,8 @@ jobs:
           IMAGE_TAG: latest
         run: |
          echo "Docker run start ---------------------------------- "
-         docker run -d -p 8080:8080 --ipc="host" --name=mltest -e $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+         docker run -d -p 8080:8080 --ipc="host" --name=stroke_prediction -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
          echo "Docker run FIINISH --------------------------------- "
       - name: Clean previous images and containers
         run: |
